<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="according_to">відповідно до</string>
    <string name="address">Адреса</string>
    <string name="address_loaded">Вулиці завантажено</string>
    <string name="alert">Увага</string>
    <string name="alert_restart_station">Для застосування змін потрібно обов\'язково перезавантажити установку</string>
    <string name="alert_wrong_date" formatted="false">Дата установки не співпадає з датою планшету.\n\nДата установки: %s\nДата планшету: %s\n\nЯку дату використовувати?</string>
    <string name="all_tasks_are_done">Усі заявки виконано</string>
    <string name="app_name">Poverka</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="average_consumption_problem">Середня витрата виміру %s допустимо</string>
    <string name="battery_charge">Заряд батареї: %d%% \n</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="calibration_date">Дата калібрування: %s \n</string>
    <string name="cancel">Відхилити</string>
    <string name="cancel_task_info" formatted="false">id: %d \nДата відхилення: %s\nКоментар: %s</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_selected_test_and_temperature">Перевірте відповідність теста і температури</string>
    <string name="check_year">Перевірте значення поля \"Рік\"</string>
    <string name="chip_text">Chip text</string>
    <string name="clean">Очистити</string>
    <string name="clear_client">Очистити</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="client">Клієнт</string>
    <string name="client_apartment">Квартира</string>
    <string name="client_building">Дім</string>
    <string name="client_city">Місто</string>
    <string name="client_counter_number">Номер лічильника</string>
    <string name="client_date_time">Дата повірки</string>
    <string name="client_district">Район</string>
    <string name="client_email">E-mail</string>
    <string name="client_hint_bukva">літера</string>
    <string name="client_hint_email">e-mail</string>
    <string name="client_hint_korpus">корпус</string>
    <string name="client_hint_note">коментар</string>
    <string name="client_hint_number">номер</string>
    <string name="client_hint_phone_dop">тел. додатковий</string>
    <string name="client_hint_phone_dop2">тел. додатковий 2</string>
    <string name="client_hint_phone_main">тел. основний</string>
    <string name="client_hint_seal">№ пломби</string>
    <string name="client_id_number">№ заявки</string>
    <string name="client_note">Коментар</string>
    <string name="client_payment_account">№ рахунку на оплату</string>
    <string name="client_personal_account">№ особового рахунку</string>
    <string name="client_phone_number">Телефон</string>
    <string name="client_protocol_number">№ протоколу</string>
    <string name="client_seal_number">№ пломби</string>
    <string name="client_service_type">Тип послуги</string>
    <string name="client_street">Вулиця</string>
    <string name="client_surname">ПІБ</string>
    <string name="completed_days_not_found">Виконані дні відсутні</string>
    <string name="confirm_your_choise">Підтвердіть свій вибір</string>
    <string name="connected">Під\'єднано</string>
    <string name="consumption_invalid">Поза межами</string>
    <string name="consumption_valid">В межах</string>
    <string name="counting_verifications">Виконується підрахунок кількості записів</string>
    <string name="cubic_meters">м³/год</string>
    <string name="date">Дата</string>
    <string name="date_time_update_after_connection">Оновлення дати і часу установки відбудеться під час наступного під\'єднання до установки</string>
    <string name="deleted_tasks_number">Заявок видалено: %d</string>
    <string name="delta_temperature_fail">Температура змінилася більше ніж допустимо</string>
    <string name="dismiss">Скасувати</string>
    <string name="dismissed">Відхилено</string>
    <string name="done_task_info" formatted="false">id: %d \n№ лічильника: %s\nДата протокола: %s\nПротокол: %s</string>
    <string name="downloading_update">Виконується скачування оновлення</string>
    <string name="enter_ip">Введіть IP адресу</string>
    <string name="enter_metrologist_name">Введіть ім\'я повірника</string>
    <string name="environment_measurement">Зміна параметрів повітря</string>
    <string name="error_apartment_has_to_be_number">У полі \"Номер квартири\" повинно бути число</string>
    <string name="error_building_has_to_be_number">У полі \"Номер будинку\" повинно бути число</string>
    <string name="error_counter_info">Помилка вибору інформації про лічильник (тип, DN, виробник)</string>
    <string name="error_file_creation">Помилка створення файлу %d</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message">Помилка \n%s</string>
    <string name="error_no_finish_photo">Виникла проблема із завершенням виміру. Якщо програма не отримала фотографію \"Фініш\" - закрийте програму і відновіть протокол.</string>
    <string name="error_no_verification_number">Установка не змогла визначити кількість записів</string>
    <string name="error_occurred_cities_downloading">Виникла помилка під час завантаження міст</string>
    <string name="error_occurred_no_station">Станцію не знайдено</string>
    <string name="error_occurred_server_downloading">Виникла помилка під час завантаження з сервера</string>
    <string name="error_occurred_streets_downloading">Виникла помилка під час завантаження вулиць</string>
    <string name="error_occurred_support_log_upload">Виникла помилка під час надсилання коду помилки</string>
    <string name="error_occurred_task_cancellation">Виникла помилка під час відхилення заявки</string>
    <string name="error_occurred_tests_loading">Виникла помилка під час завантаження бази тестів з сервера</string>
    <string name="error_occurred_types_loading">Виникла помилка під час завантаження бази типів приладів з сервера</string>
    <string name="error_occurred_update_checking">Виникла помилка під час перевірки оновлень</string>
    <string name="error_occurred_update_downloading">Виникла помилка під час завантаження оновлення з сервера</string>
    <string name="error_page_inserter">Виникла помилка під час отримання фото</string>
    <string name="error_sd_card">помилка SD карти</string>
    <string name="error_tests_in_station_upload">Помилка оновлення бази тестів установки</string>
    <string name="error_type_selection">Помилка вибору типу лічильника</string>
    <string name="error_verification_count_code">Установка не змогла визначити кількість записів.\nКод помилки: %d</string>
    <string name="error_volume_size">Поле \"Об\'єм\" повинно складати 5 символів</string>
    <string name="error_wrong_date_time">Поточна дата установки і планшету не співпадають. \nЗверніть увагу!</string>
    <string name="error_year">Необхідно заповнити поле \"Рік\", 4 символи</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file_loaded">Файл %s завантажено</string>
    <string name="fill_client">Заповнити</string>
    <string name="finish">Фініш</string>
    <string name="finish_number">Фініш %d</string>
    <string name="firmware_update">Оновлення ПЗ установки</string>
    <string name="firmware_update_available" formatted="false">Доступна нова версія ПЗ установки \nПоточна версія: %s \nДоступна версія: %s \n</string>
    <string name="for_cold_water">холодної</string>
    <string name="for_hot_water">гарячої</string>
    <string name="global_temperature_fail">Температурний діапазон не відповідає обраному тесту</string>
    <string name="has_to_be_00001_99999">Номер рахунку на оплату має бути в межах від 00001 до 99999</string>
    <string name="image_button_save">Записати</string>
    <string name="image_img_description">Велике фото</string>
    <string name="image_view_DN">DN:</string>
    <string name="image_view_liter">Літри:</string>
    <string name="image_view_name">Назва фото</string>
    <string name="image_view_number">Номер:</string>
    <string name="image_view_number_val">12 456/098-2</string>
    <string name="image_view_type">Тип:</string>
    <string name="image_view_volume">Об\'єм:</string>
    <string name="image_view_volume_val">00987</string>
    <string name="image_view_year">Рік:</string>
    <string name="image_view_year_val">2020</string>
    <string name="settings_button_check_apk_update">Перевірити наявність оновлень</string>
    <string name="settings_button_default_ip">192.168.43.140</string>
    <string name="settings_button_load_address">Завантажити вулиці</string>
    <string name="settings_button_load_data_local">Локальне завантаження</string>
    <string name="settings_button_load_data_server">Завантажити бази типів, тестів</string>
    <string name="settings_button_metrologist_name">Ім\'я повірника</string>
    <string name="settings_button_re_send_protocol">Повтор відправлення протоколу</string>
    <string name="settings_button_set_environment">Параметри повітря</string>
    <string name="settings_button_support">Допомога</string>
    <string name="settings_button_version_info">Що нового у версії</string>
    <string name="settings_language">Мова</string>
    <string name="settings_payment_account">Рахунки на оплату</string>
    <string name="settings_switch_dispatcher">Під\'єднатися до бази заявок</string>
</resources>