<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark_gradient"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_background"
                android:padding="16dp">

                <Switch
                    android:id="@+id/switchDispatcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/settings_switch_dispatcher"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/buttonSettingsLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_language"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/switchDispatcher"
                    app:layout_constraintEnd_toEndOf="@+id/buttonSettingsReSendProtocol"
                    app:layout_constraintTop_toTopOf="@+id/switchDispatcher"/>

                <Button
                    android:id="@+id/buttonSettingsLoadAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_load_address"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/switchDispatcher"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.45"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.55"/>

                <Button
                    android:id="@+id/buttonSettingsPaymentAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_payment_account"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsLoadAddress"/>

                <Button
                    android:id="@+id/buttonSettingsLoadLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_load_data_local"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsPaymentAccount"/>

                <Button
                    android:id="@+id/buttonSettingsLoadServer"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_load_data_server"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsLoadLocal"/>

                <Button
                    android:id="@+id/buttonSettingsCheckApkUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_check_apk_update"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsLoadServer"/>

                <Button
                    android:id="@+id/buttonSettingsVersionInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_version_info"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsCheckApkUpdate"/>

                <Button
                    android:id="@+id/buttonSettingsMetrologistName"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_metrologist_name"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintStart_toStartOf="@+id/guideline10"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsSupport"/>

                <Button
                    android:id="@+id/buttonSetIP"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_default_ip"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/buttonSettingsPaymentAccount"
                    app:layout_constraintStart_toStartOf="@+id/guideline10"/>

                <Button
                    android:id="@+id/buttonSetEnvironment"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_set_environment"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintStart_toStartOf="@+id/guideline10"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSetIP"/>

                <Button
                    android:id="@+id/buttonSettingsReSendProtocol"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_re_send_protocol"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintStart_toStartOf="@+id/guideline10"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSetEnvironment"/>

                <Button
                    android:id="@+id/buttonSettingsSupport"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_secondary"
                    android:fontFamily="@font/nunito"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/settings_button_support"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    app:layout_constraintStart_toStartOf="@+id/guideline10"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSettingsReSendProtocol"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
