<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@drawable/bg_dark_gradient">
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.6"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image_img_description"
            app:srcCompat="@drawable/no_image"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="21sp"
                    android:id="@+id/textImageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_view_name"
                    android:textColor="@color/colorTextPrimary"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/startLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="21sp"
                        android:id="@+id/textNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_number"
                        app:layout_constraintBottom_toBottomOf="@+id/editNumber"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editNumber"
                    android:textColor="@color/colorTextPrimary"/>
                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/editNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_number_val"
                        android:ems="10"
                        android:selectAllOnFocus="true"
                        android:inputType="textPostalAddress"
                        android:imeOptions="flagNoFullscreen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:textSize="21sp"
                        android:id="@+id/textVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_volume"
                        app:layout_constraintBottom_toBottomOf="@+id/editVolume"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editVolume"
                    android:textColor="@color/colorTextPrimary"/>
                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/editVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_volume_val"
                        android:ems="10"
                        android:selectAllOnFocus="true"
                        android:inputType="numberDecimal"
                        android:imeOptions="flagNoFullscreen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editNumber"/>
                    <TextView
                        android:textSize="21sp"
                        android:id="@+id/textYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_year"
                        app:layout_constraintBottom_toBottomOf="@+id/editYear"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/editYear"
                    android:textColor="@color/colorTextPrimary"/>
                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/editYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_year_val"
                        android:ems="10"
                        android:selectAllOnFocus="true"
                        android:inputType="number"
                        android:imeOptions="flagNoFullscreen"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editVolume"/>
                    <TextView
                        android:textSize="21sp"
                        android:id="@+id/textType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_type"
                        app:layout_constraintBottom_toBottomOf="@+id/spinnerType"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spinnerType"
                    android:textColor="@color/colorTextPrimary"/>
                    <Spinner
                        android:id="@+id/spinnerType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/editYear"
                        app:layout_constraintTop_toBottomOf="@+id/editYear"/>
                    <TextView
                        android:textSize="21sp"
                        android:id="@+id/textDN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_DN"
                        app:layout_constraintBottom_toBottomOf="@+id/spinnerDN"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spinnerDN"
                    android:textColor="@color/colorTextPrimary"/>
                    <Spinner
                        android:id="@+id/spinnerDN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/spinnerType"
                        app:layout_constraintTop_toBottomOf="@+id/spinnerType"/>
                    <Spinner
                        android:id="@+id/spinnerVendor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spinnerDN"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/measurementLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="21sp"
                        android:id="@+id/textLiter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image_view_liter"
                        app:layout_constraintBottom_toBottomOf="@+id/editLiter"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorTextPrimary"/>
                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/editLiter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:selectAllOnFocus="true"
                        android:inputType="numberDecimal"
                        android:imeOptions="flagNoFullscreen"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_secondary"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/image_button_save"
                    android:onClick="SaveClicked"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
